hard-gists/58e015dd9ff33049da5a/run.log
=== Docker Run Log for 58e015dd9ff33049da5a ===
Started at: Mi 29. Okt 16:09:36 CET 2025

[2025-10-29 16:09:37] START: Running container for 58e015dd9ff33049da5a
[2025-10-29 16:09:37] SUCCESS: Container 1e77543351f95d91e594b2299aadca9ca2e2d4e5b2be528f13fe00e77113bbf7 started for 58e015dd9ff33049da5a
=== Container logs for 58e015dd9ff33049da5a ===
  File "/snippet.py", line 117
    print 'Epoch {0:d} Batchnum {1:d} Loss={2:.5f}'.format(epoch, batchnum, loss)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 58e015dd9ff33049da5a ===
[2025-10-29 16:09:39] INFO: Container 1e77543351f95d91e594b2299aadca9ca2e2d4e5b2be528f13fe00e77113bbf7 has stopped
